--- a/CV/CV.html
+++ b/CV/CV.html
@@ -10,7 +10,7 @@
         <form id="CV" class="formContainer">
         <div class="container">
             <div class="info-container">
-                    <img src="C:\Users\pc\Documents\GitHub\Ejercicio-2-5\foto.png">
+                    <img src="C:\Users\pc\Desktop\MASTER ESRI\5-DESARROLLO DE APLICACIONES WEB\2.-Introducción a JavaScript\1.-Programación con JavaScript\Ejercicios\Introduccion-JavaScript\CV\foto.png">
                 <div class="infoPersonal-button">
                     <button class="personal-button"  onclick= "inforperson()" onmouseover="cambiocolorG()">INFORMACIÓN PERSONAL</button>
                     <br>
@@ -45,6 +45,7 @@
         <script src="myscript.js"></script>
         <address>
             Actualizado: 02 de febrero de 2021
+            <button onclick="imprimir()">Imprimir pantalla</button>
           </address>
     </body>
 </html>
